# FlamentineSwitcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  caramba-assessment.md  config-format.md  dbus-api.md  testing-x11-smoke.md  wayland-limitations.md
include/flamentine_switcher/backends/hotkeys/: ihotkey_backend.h  noop_hotkey_backend.h  x11_hotkey_backend.h
include/flamentine_switcher/backends/layout/: ilayout_backend.h  wayland_layout_backend.h  x11_layout_backend.h
include/flamentine_switcher/backends/text/: itext_input_backend.h  noop_text_input_backend.h  x11_text_input_backend.h
include/flamentine_switcher/backends/window/: fallback_window_backend.h  iwindow_backend.h  x11_window_backend.h
include/flamentine_switcher/conversion/: heuristics.h  layout_maps.h  text_converter.h
include/flamentine_switcher/core/: application_controller.h  config.h  layout_memory.h  models.h  rules.h  settings_manager.h
include/flamentine_switcher/services/: autostart_service.h  dbus_service.h
include/flamentine_switcher/ui/: notifications.h  settings_window.h  tray_icon.h
include/flamentine_switcher/utils/: logging.h  process_info.h  string_utils.h
packaging/arch/: PKGBUILD
packaging/desktop/: flamentine-switcher-autostart.desktop  flamentine-switcher.desktop
src/app/: main.cpp
src/backends/hotkeys/: noop_hotkey_backend.cpp  x11_hotkey_backend.cpp
src/backends/layout/: wayland_layout_backend.cpp  x11_layout_backend.cpp
src/backends/text/: noop_text_input_backend.cpp  x11_text_input_backend.cpp
src/backends/window/: fallback_window_backend.cpp  x11_window_backend.cpp
src/conversion/: heuristics.cpp  layout_maps.cpp  text_converter.cpp
src/core/: application_controller.cpp  config.cpp  layout_memory.cpp  rules.cpp  settings_manager.cpp
src/services/: autostart_service.cpp  dbus_service.cpp
src/ui/: notifications.cpp  settings_window.cpp  tray_icon.cpp
src/utils/: logging.cpp  process_info.cpp  string_utils.cpp
tests/: config_tests.cpp  conversion_tests.cpp  heuristics_tests.cpp  layout_memory_tests.cpp  rules_tests.cpp  run_x11_delayed_replacement_e2e.sh  run_x11_remember_per_app_e2e.sh  run_x11_remember_per_window_e2e.sh  run_x11_runtime_smoke_suite.sh  x11_text_target.cpp
